--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/core": "^12.3.0",
     "nuxt": "^3.15.0",
     "peerjs": "^1.5.4",
     "vue": "latest",
@@ -25,6 +26,7 @@
     "@vant/touch-emulator": "^1.4.0",
     "@vueuse/nuxt": "^12.2.0",
     "naive-ui": "^2.40.4",
-    "prettier": "3.4.2"
+    "prettier": "3.4.2",
+    "uuid": "^11.0.3"
   }
 }
