--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^12.3.0",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "nuxt": "^3.15.0",
     "peerjs": "^1.5.4",
     "vue": "latest",
@@ -23,6 +25,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
+    "@types/lodash": "^4.17.14",
     "@vant/touch-emulator": "^1.4.0",
     "@vueuse/nuxt": "^12.2.0",
     "naive-ui": "^2.40.4",
